--- a/index.html
+++ b/index.html
@@ -4,15 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Receitas!</title>
-    <link rel="stylesheet" href="styleHomework.css">
+    <link rel="stylesheet" href="styleIndex.css">
 </head>
 
 <header>
-     <a href="homework.html"><img src="asserts/logo.png" alt="logo do site" width="250"></a>
+     <a href="index.html"><img src="asserts/logo.png" alt="logo do site" width="250"></a>
 </header>
 
 <nav>
-    <a href="homework.html">Receitas!</a>
+    <a href="index.html">Receitas!</a>
     <a href="curiosidades.html">Curiosidades!</a>
 </nav>
 
