--- a/recipe2.html
+++ b/recipe2.html
@@ -8,11 +8,11 @@
 </head>
 
 <header>
-    <a href="homework.html"><img src="asserts/logo.png" alt="logo do site" width="250"></a>
+    <a href="index.html"><img src="asserts/logo.png" alt="logo do site" width="250"></a>
 </header>
 
 <nav>
-   <a href="homework.html">Receitas!</a>
+   <a href="index.html">Receitas!</a>
    <a href="curiosidades.html">Curiosidades!</a>
 </nav>
 
