links and formatting update

--- a/curiosidades.html
+++ b/curiosidades.html
@@ -63,9 +63,9 @@
     <div>
         <a href="#">Instagram</a>
         <br>
-        <a href="#">Facebook</a>
+        <a href="##">Facebook</a>
         <br>
-        <a href="#">TikTok</a>
+        <a href="###">TikTok</a>
     </div>
 </footer>
 
