--- a/index.html
+++ b/index.html
@@ -20,12 +20,12 @@
     <br><br><br>
     <div>
         <a href="recipe1.html"><img src="asserts/saladaFrutasReceita1.jpg" alt="receita 1" width="500" class = "asserts"></a>
-        <p>Salada de frutas</p>
+        <p>Salada de frutas!</p>
     </div>
     <br><br><br><br>
     <div>
         <a href="recipe2.html"><img src="asserts/omeleteReceita2.jpg" alt = "receita 2" width="500" class = "asserts"></a>
-        <p>Omelete com vegetais</p>
+        <p>Omelete com vegetais!</p>
     </div>
     <br><br><br><br>
     <div>
@@ -46,9 +46,9 @@
     <div>
         <a href="#">Instagram</a>
         <br>
-        <a href="#">Facebook</a>
+        <a href="##">Facebook</a>
         <br>
-        <a href="#">TikTok</a>
+        <a href="###">TikTok</a>
     </div>
 </footer>
 
