--- a/recipe2.html
+++ b/recipe2.html
@@ -66,9 +66,9 @@
     <div>
         <a href="#">Instagram</a>
         <br>
-        <a href="#">Facebook</a>
+        <a href="##">Facebook</a>
         <br>
-        <a href="#">TikTok</a>
+        <a href="###">TikTok</a>
     </div>
 </footer>
 
