--- a/recipe3.html
+++ b/recipe3.html
@@ -70,9 +70,9 @@
     <div>
         <a href="#">Instagram</a>
         <br>
-        <a href="#">Facebook</a>
+        <a href="##">Facebook</a>
         <br>
-        <a href="#">TikTok</a>
+        <a href="###">TikTok</a>
     </div>
 </footer>
 
