--- a/recipe1.html
+++ b/recipe1.html
@@ -43,7 +43,7 @@
         <ol>
             <li>Lave e corte todas as frutas em pedaços pequenos;</li>
             <li>Misture todas as frutas em uma tigela grande;</li>
-            <li>Sirva imediatamente ou leve à geladeira por 30 minutos para uma salada de frutas gelada e refrescante.</li>
+            <li>Sirva imediatamente ou leve à geladeira por 30 minutos para uma salada de frutas gelada e refrescante!</li>
         </ol>
     </div>
     <br><br><br>
