--- a/recipe2.html
+++ b/recipe2.html
@@ -47,7 +47,7 @@
             <li>Cozinhe por cerca de 2-3 minutos, até que os ovos estejam firmes na parte inferior.</li>
             <li>Com uma espátula, dobre o omelete ao meio, formando uma meia lua.</li>
             <li>Cozinhe por mais 1-2 minutos, até que o omelete esteja cozido por completo e o queijo derretido.</li>
-            <li>Deslize o omelete para um prato e sirva imediatamente.</li>
+            <li>Deslize o omelete para um prato e sirva imediatamente!</li>
         </ol>
     </div>
 
