--- a/recipe3.html
+++ b/recipe3.html
@@ -52,6 +52,7 @@
             <li>Retire o peixe da geladeira e adicione a cebola roxa, o coentro, a pimenta dedo de moça e adicione sal e pimenta do reino a gosto;</li>
             <li>Misture suavemente;</li>
             <li>Adicione o restante do suco de limão.</li>
+            <li>Sirva o prato!</li>
 
         </ol>
     </div>
